--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - run: |
-          choco install llvm -y --version=17.0.6
+          choco install llvm -y --version=17.0.6 --force
 
       - name: clang-format
         run: |
